// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPlusCreateNew Component renders correctly when closed 1`] = `
<div>
  <button
    class="bg-primary400-mode1 flex h-[30px] w-[30px] shrink-0 cursor-pointer items-center justify-center rounded-[15px] border-none p-[3px] "
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 25 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.6816 20.2856V12.7856H4.18164V11.7856H11.6816V4.28564H12.6816V11.7856H20.1816V12.7856H12.6816V20.2856H11.6816Z"
        fill="#000000"
      />
    </svg>
  </button>
</div>
`;

exports[`ButtonPlusCreateNew Component renders correctly when disabled 1`] = `
<div>
  <button
    class="bg-primary400-mode1 flex h-[30px] w-[30px] shrink-0 cursor-pointer items-center justify-center rounded-[15px] border-none p-[3px] pointer-events-none opacity-50"
    disabled=""
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 25 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.6816 20.2856V12.7856H4.18164V11.7856H11.6816V4.28564H12.6816V11.7856H20.1816V12.7856H12.6816V20.2856H11.6816Z"
        fill="#cccccc"
      />
    </svg>
  </button>
</div>
`;

exports[`ButtonPlusCreateNew Component renders correctly when open 1`] = `
<div>
  <button
    class="bg-primary400-mode1 flex h-[30px] w-[30px] shrink-0 cursor-pointer items-center justify-center rounded-[15px] border-none p-[3px] "
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 25 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.66869 18.5935L5.96094 17.8858L11.5609 12.2858L5.96094 6.68578L6.66869 5.97803L12.2687 11.578L17.8687 5.97803L18.5764 6.68578L12.9764 12.2858L18.5764 17.8858L17.8687 18.5935L12.2687 12.9935L6.66869 18.5935Z"
        fill="#000000"
      />
    </svg>
  </button>
</div>
`;
